# JOSModules

./: .gitmodules  Makefile  README.md
Archive/: jos_modules_mainpage.md
docs/: CMake-API.md
docs/doxygen/: Doxyfile  DoxygenLayoutJOS.xml  Makefile  custom.css  foleys_modules_mainpage.dox  jos_modules.dox  jos_modules_mainpage.dox  process_source_files.py
docs/doxygen/jos_modules_ccrma_2024-10-04/: classFaustModule-members.html  classFaustModule.html  classFreeverb-members.html  classFreeverb.html  classTestClassEffects-members.html  classTestClassEffects.html  classTestClassShared-members.html  classTestClassShared.html  classZitarev-members.html  classZitarev.html  dir_26bd0a0a102f9880c3359ac46b6cb6f8.html  dir_32ac7f4a0187f3fd3f6700c50d95e7da.html  dir_3de87d3a0e9d43a3a889ff8542f41f31.html  dir_4b6693424380eecc274fb11f4eca3e2b.html  dir_4ce4ba576c6b03e9f07d02d33deb94f8.html  dir_5ebed9439335c664b7b122fcbc3ff8f2.html  dir_67e5d47abcfb891833ad784bd8026ba1.html  (+24 more)
examples/Reverb/: CMakeLists.txt  Makefile  README.md  Reverb.jucer
modules/: CMakeLists.txt  JuceModuleFormat.md  MakePGMLink.tcsh
modules/jos_faust/: README.md  jos_faust.cpp  jos_faust.h
modules/jos_faust/effects/: jos_effects.cpp  jos_effects.h  jos_freeverb.cpp  jos_freeverb.h  jos_zitarev.cpp
modules/jos_faust/faust-src/: README.md
modules/jos_faust/filters/: jos_filters.cpp  jos_filters.h
modules/jos_faust/oscillators/: jos_oscillators.cpp  jos_oscillators.h
modules/jos_faust/shared/: jos_faust_module.h  jos_shared.cpp  jos_shared.h
modules/juce_analytics/: juce_analytics.h
(+4 files in other folders)
